test/mulberry/Language/struct_list_name_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

struct A[2] {
  value: UInt64
}

fn main(): UInt64 {
  return 0;
}

# CHECK: error: expected
